adjust font size for mobile to prevent squished lines, added class to work area for mobile padding

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,7 @@ body {
   color: rgba(0, 0, 0, 0.7); }
   @media screen and (max-width: 768px) {
     body {
-      font-size: 16px; } }
+      font-size: 15px; } }
 
 a {
   color: #2c98f0;
@@ -1498,3 +1498,9 @@ body.offcanvas {
 
 .js .animate-box {
   opacity: 0; }
+
+@media screen and (max-width: 786px) {
+	.work-experience {
+		padding: 0px;
+	}
+}
